// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`String regex and required validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,14 +3,18 @@
      <div>
        <label>
          First name
        </label>
        <input
+         error=\\"First name is required\\"
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"antonio\\"
+         value=\\"\\"
        />
+       <div>
+         First name is required
+       </div>
      </div>
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String regex and required validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,14 +3,18 @@
      <div>
        <label>
          First name
        </label>
        <input
+         error=\\"First name must start with \\\\\\"wooga.name\\\\\\"\\"
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"antonio\\"
+         value=\\"wooga\\"
        />
+       <div>
+         First name must start with \\"wooga.name\\"
+       </div>
      </div>
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String regex and required validation 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
          First name
        </label>
        <input
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"antonio\\"
+         value=\\"wooga.name.antonio\\"
        />
      </div>
      <button
        type=\\"submit\\"
      >"
`;

exports[`String regex validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,14 +3,18 @@
      <div>
        <label>
          First name
        </label>
        <input
+         error=\\"First name must start with \\\\\\"wooga.name\\\\\\"\\"
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"\\"
+         value=\\"antonio\\"
        />
+       <div>
+         First name must start with \\"wooga.name\\"
+       </div>
      </div>
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String regex validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
          First name
        </label>
        <input
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"\\"
+         value=\\"wooga.name antonio\\"
        />
      </div>
      <button
        type=\\"submit\\"
      >"
`;

exports[`String required validation 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,14 +3,18 @@
      <div>
        <label>
          First name
        </label>
        <input
+         error=\\"This field is required\\"
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"antonio\\"
+         value=\\"\\"
        />
+       <div>
+         This field is required
+       </div>
      </div>
      <button
        type=\\"submit\\"
      >
        Submit"
`;

exports[`String required validation 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,11 +5,11 @@
          First name
        </label>
        <input
          label=\\"First name\\"
          name=\\"firstName\\"
-         value=\\"antonio\\"
+         value=\\"Wooga\\"
        />
      </div>
      <button
        type=\\"submit\\"
      >"
`;
